--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/sanctum": "^4.2",
         "laravel/socialite": "^5.23",
         "laravel/tinker": "^2.10.1",
+        "leandrocfe/filament-apex-charts": "^3.2",
         "livewire/livewire": "^3.6"
     },
     "require-dev": {
