--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "laravel/socialite": "^5.23",
         "laravel/tinker": "^2.10.1",
         "leandrocfe/filament-apex-charts": "^3.2",
-        "livewire/livewire": "^3.6"
+        "livewire/livewire": "^3.6",
+        "midtrans/midtrans-php": "^2.6"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
